# LLMtoSQL

./: .gitignore  01_ML_Training_local-new.ipynb  01_ML_Training_local.ipynb  02_ML_Training_SageMaker_distributed.ipynb  03_ML_Testing.ipynb  README.md  dowload-model.py  generate_predictions_file.py  main.py  playground.ipynb  playground_.ipynb  playground__.ipynb  playground___.ipynb  pyproject.toml  requirements.txt
llmtosql/: dataloader.py  model.py  trainer.py
llmtosql/utils/: functions.py  utils.py
llmtosql/utils/modules/: aggregation.py  base_model.py  base_module.py  conditions.py  select.py
